--- a/futhark.cabal
+++ b/futhark.cabal
@@ -190,6 +190,7 @@ library
       Futhark.CLI.Dev
       Futhark.CLI.Doc
       Futhark.CLI.Eval
+      Futhark.CLI.Fmt
       Futhark.CLI.Literate
       Futhark.CLI.LSP
       Futhark.CLI.Main
